MB-57296: Remove all_buckets lock acquire from forEach

The all_buckets lock can be removed from BucketManager::forEach as
the for loop itself will take care of correct access to valid buckets
as it will lock each bucket (bucket.mutex), inspect the state and
set a new reference.

Removing the all_buckets lock improves concurrent usage of forEach
for example allowing mc_time.cc mc_gather_timing_samples and the
stats.cc server_prometheus_stats to not serialise each other (which
can be problematic when/if server_prometheus_stats is slow).

Change-Id: I4ce75b9c66ad34d3e23c6867e80ba36e4629d8b2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/192378
Well-Formed: Restriction Checker
Reviewed-by: James H <james.harrison@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>